[JBTM-3867] CI: Do not use wildfly latest with Java 11